# blockchain-access-LTP-LoRaWAN

./: .gitignore  Cargo.toml  Keys_and_Signatures.txt  README.md  build.rs  install.sh
cloud/substrate/cloud-deployments/: 1-substrate-aura-4-nodes.yaml  customSpec.json  customSpecRaw.json  delete-substrate-net.sh  deploy-monitoring.sh  deploy-substrate.sh  genNodeYaml.sh  generateKeys.sh  grafana_dashboard.json  ingress.yaml  keys_file.sh  monitoring.yaml  prometheus-configmap.yaml  start_substrate.sh  substrate-kube.yaml
cloud/substrate/substrate-node/: Dockerfile-installed-bionic  README.md
edge-device-code/: RelayConfig.h  edge-device-code.ino
end-device-code/end-device-light-payload/: end-device-light-payload.ino
energy_consumption/: settings OTII
energy_consumption/edge_device/3_result_part_estimated/: result_1_edge_24_bytes_without.csv  result_part_4.csv  result_part_4.py
energy_consumption/end_device/estimated_battery/: result_part_4.csv  (+3 more)
latency_gnuplot/: gateway_module_latency.eps  gateway_module_latency.gnuplot
libs/: README.md
libs/LightTransaction/: LightTransaction.cpp  LightTransaction.h  bignum.cpp  ecdsa.cpp  hasher.h  options.h  payload.options  payload.pb.h  payload.proto
libs/libfabric/: fabric.go  go.mod  go.sum  main.go
resources/protobuf/: payload.options  payload.proto
smart_contracts/Ethereum/: IoT_smart_contract.sol  depploy_smart_contract_test.js  interact_with_smart_contract_test.js
smart_contracts/Substrate/: Cargo.toml
src/: blockchains.rs  lib.rs  main.rs
src/blockchains/: hyperledger_fabric.rs  substrate.rs
src/payload/: mod.rs  payload.rs
src/std/: error.rs
(+147 files in other folders)
